<resources>
    <string name="app_name">ForecastApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Fragments -->
    <string name="weather_current">Dzisiaj</string>
    <string name="weather_forecast">Prognoza</string>
    <string name="weather_list">Poprawność</string>

    <!-- Weather details -->
    <string name="weather_icon">Weather icon</string>
    <string name="humidity">Wilgotność</string>
    <string name="wind_speed">Prędkość wiatru</string>
    <string name="clouds">Zachmurzenie</string>
    <string name="pressure">Ciśnienie</string>
    <string name="wind_direction">Kierunek wiatru</string>
    <string name="uv_index">Index UV</string>
    <string name="temperature">Temperatura</string>

    <!-- Week list -->
    <string name="tomorrow">Jutro</string>
    <string name="tomorrowPlus">Pojutrze</string>

    <!-- Temperature -->
    <string name="morn">Ranek</string>
    <string name="day">Dzień</string>
    <string name="eve">Wieczór</string>
    <string name="night">Noc</string>
    <string name="min">Minimalna</string>
    <string name="max">Maksymalna</string>

    <!-- Other -->
    <string name="welcome">Witaj!</string>
    <string name="fbutton_description">Zapisz pogodę</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">Ok</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="btn_open_desc">Open saved weather button</string>
    <string name="q_mark">\?</string>
    <string name="delete">Delete</string>
    <string name="success">Sukces!</string>

    <!-- Alerts -->
    <string name="city_changing">Zmień miasto</string>
    <string name="field_empty">Pole było puste!</string>
    <string name="forecast_added">Pomyślnie zapisano prognozę!</string>
    <string name="gps_check">Nie udało się pobrać lokacji użytkownika. Rozważ wejście do ustawień
        i nadanie aplikacji uprawnień do lokalizacji w celu dostarczenia prognozy dla dokładnych współrzędnych.</string>
    <string name="error">Błąd</string>
    <string name="caution">Uwaga!</string>
    <string name="delete_forever">Wybrana prognoza zostanie usunięta na zawsze. Czy chcesz kontynuować?</string>
    <string name="perm_needed">Wymagane uprawnienia</string>
    <string name="perm_needed_desc">Uprawnienia są wymagane do pobrania lokalizacji użytkownika
        i wyświetlenia danych pogodowych dla tej lokalizacji.</string>

    <!-- ListOpenFragment - titles -->
    <string name="titleL"><u>Prognozowana</u></string>
    <string name="titleR"><u>Rzeczywista</u></string>

</resources>