<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/currentFragment">

    <fragment
        android:id="@+id/currentFragment"
        android:name="com.example.forecastapp.view.CurrentFragment"
        android:label="@string/weather_current"
        tools:layout="@layout/fragment_current" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.forecastapp.view.ListFragment"
        android:label="@string/weather_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_listOpenFragment"
            app:destination="@id/listOpenFragment" />
    </fragment>

    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.example.forecastapp.view.ForecastFragment"
        android:label="@string/weather_forecast"
        tools:layout="@layout/fragment_forecast" />
    <fragment
        android:id="@+id/listOpenFragment"
        android:name="com.example.forecastapp.view.ListOpenFragment"
        android:label="@string/weather_list"
        tools:layout="@layout/fragment_list_open"
        />
</navigation>